chore: apply IntelliJ code suggestions