@@ -15,8 +15,8 @@ import java.nio.ByteBuffer;
  * <p>Usually single byte fields are used as a boolean field, but not always so we dont do this conversion
  */
 public class Mp4TagByteField extends Mp4TagTextField {
-  public static String TRUE_VALUE = "1";  //when using this field to hold a boolean
-  public static String FALSE_VALUE = "0";
+  public static final String TRUE_VALUE = "1";  //when using this field to hold a boolean
+  public static final String FALSE_VALUE = "0";
   //Holds the actual size of the data content as held in the databoxitem, this is required when creating new
   //items because we cant accurately work out the size by looking at the content because sometimes field must be longer
   //than is actually required to hold the value
@@ -95,21 +95,19 @@ public class Mp4TagByteField extends Mp4TagTextField {
       case 2: {
         //Save as two bytes
         Short shortValue = new Short(content);
-        byte rawData[] = Utils.getSizeBEInt16(shortValue);
-        return rawData;
+          return Utils.getSizeBEInt16(shortValue);
       }
       case 1: {
         //Save as 1 bytes
         Short shortValue = new Short(content);
-        byte rawData[] = new byte[1];
+        byte[] rawData = new byte[1];
         rawData[0] = shortValue.byteValue();
         return rawData;
       }
       case 4: {
         //Assume could be int
-        Integer intValue = new Integer(content);
-        byte rawData[] = Utils.getSizeBEInt32(intValue);
-        return rawData;
+        Integer intValue = Integer.valueOf(content);
+          return Utils.getSizeBEInt32(intValue);
       }
       default: {
         //TODO
